Overhaul. First working version.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/ninja"]
 	path = deps/ninja
 	url = https://github.com/ninja-build/ninja.git
+[submodule "example/deps/sdl3"]
+	path = example/deps/sdl3
+	url = https://github.com/libsdl-org/SDL.git
